--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -12,10 +12,10 @@
                 </div>
 
                 <div class="w-full md:w-10 mx-auto">
-                    <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
+                    <label for="email1" class="block text-900 text-xl font-medium mb-2" [(ngModel)]="name">Name</label>
                     <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3" style="padding:1rem;">
 
-                    <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
+                    <label for="password1" class="block text-900 font-medium text-xl mb-2" [(ngModel)]="password">Password</label>
                     <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="w-full mb-3"></p-password>
 
                     <div class="flex align-items-center justify-content-between mb-5">
