working on resource add

--- a/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
+++ b/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
@@ -23,11 +23,11 @@
         <td>
           <img [src]="workshop.photo || 'assets/images/placeholder-workshop.png'" 
                class="workshop-image"
-               alt="{{workshop.name}} thumbnail">
+               alt="{{ workshop.name }} thumbnail">
         </td>
-        <td>{{workshop.name}}</td>
-        <td>{{workshop.theme}}</td>
-        <td>{{workshop.description}}</td>
+        <td>{{ workshop.name }}</td>
+        <td>{{ workshop.theme }}</td>
+        <td>{{ workshop.description }}</td>
         <td>
           <div class="flex gap-2">
             <button pButton 
@@ -39,6 +39,12 @@
                     icon="pi pi-trash" 
                     class="p-button-rounded p-button-danger" 
                     (click)="deleteWorkshop(workshop.id)"></button>
+            
+            <!-- Button to redirect to the resource list for a specific workshop -->
+            <button pButton 
+                    icon="pi pi-list" 
+                    class="p-button-rounded p-button-info" 
+                    [routerLink]="['/workshops', workshop.id, 'resources']"></button>
           </div>
         </td>
       </tr>
