--- a/src/app/demo/components/resource/resource-list/resource-list.component.html
+++ b/src/app/demo/components/resource/resource-list/resource-list.component.html
@@ -1,45 +1,59 @@
-<div class="card">
-    <div class="p-mb-4">
-      <button pButton 
-              label="Add New Resource" 
-              icon="pi pi-plus"
-              class="p-button-primary"
-              [routerLink]="['/workshops', workshopId, 'resources', 'new']"></button>
-    </div>
-  
-    <p-table [value]="resources" [paginator]="true" [rows]="10" responsiveLayout="scroll">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Resource Name</th>
-          <th>Description</th>
-          <th>Actions</th>
-        </tr>
-      </ng-template>
-      
-      <ng-template pTemplate="body" let-resource>
-        <tr>
-          <td>{{ resource.name }}</td>
-          <td>{{ resource.description }}</td>
-          <td>
-            <div class="flex gap-2">
-              <button pButton 
-                      icon="pi pi-pencil" 
-                      class="p-button-rounded p-button-success" 
-                      [routerLink]="['/workshops', workshopId, 'resources', resource.id, 'edit']"></button>
-  
-              <button pButton 
-                      icon="pi pi-trash" 
-                      class="p-button-rounded p-button-danger" 
-                      (click)="deleteResource(resource.id)"></button>
-  
-              <button pButton 
-                      icon="pi pi-info-circle" 
-                      class="p-button-rounded p-button-info" 
-                      [routerLink]="['/workshops', workshopId, 'resources', resource.id]"></button>
-            </div>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
+<div class="resource-list-container">
+  <div *ngIf="loading" class="loading-spinner">
+    <p>Loading resources...</p>
   </div>
-  
+
+  <div *ngIf="error" class="error-message p-message p-message-error">
+    {{ error }}
+    <button pButton label="Retry" (click)="loadResources()"></button>
+  </div>
+
+  <div *ngIf="!loading && !error">
+    <div class="header">
+      <h2>Resources for Workshop</h2>
+      <button pButton 
+              icon="pi pi-plus" 
+              label="Add Resource" 
+              [routerLink]="['/workshops', workshopId, 'resources', 'new']">
+      </button>
+    </div>
+
+    <div *ngIf="resources.length === 0" class="no-resources">
+      <p>No resources found for this workshop.</p>
+    </div>
+
+    <div class="resource-grid">
+      <div *ngFor="let resource of resources" class="resource-card p-card">
+        <div class="card-header">
+          <h3>{{ resource.name }}</h3>
+          <div class="actions">
+            <button pButton 
+                    icon="pi pi-eye" 
+                    class="p-button-rounded p-button-info" 
+                    [routerLink]="['/workshops', workshopId, 'resources', resource.id]">
+            </button>
+            <button pButton 
+                    icon="pi pi-pencil" 
+                    class="p-button-rounded p-button-warning" 
+                    [routerLink]="['/workshops', workshopId, 'resources', resource.id, 'edit']">
+            </button>
+            <button pButton 
+                    icon="pi pi-trash" 
+                    class="p-button-rounded p-button-danger" 
+                    (click)="deleteResource(resource.id)">
+            </button>
+          </div>
+        </div>
+        
+        <div class="card-content">
+          <p>{{ resource.description }}</p>
+          <p>Skill Level: {{ resource.niveau }}</p>
+          
+          <div *ngIf="imageUrls[resource.id]" class="resource-image">
+            <img [src]="imageUrls[resource.id]" alt="Resource image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
