--- a/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
+++ b/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
@@ -46,6 +46,20 @@
                     class="p-button-rounded p-button-info" 
                     [routerLink]="['/workshops', workshop.id, 'resources']"></button>
           </div>
+            <!-- New Quiz buttons -->
+  <button pButton 
+  icon="pi pi-question-circle" 
+  class="p-button-rounded p-button-help" 
+  [routerLink]="['/workshops', workshop.id, 'quizzes']"
+  pTooltip="View quizzes" 
+  tooltipPosition="top"></button>
+
+<button pButton 
+  icon="pi pi-plus" 
+  class="p-button-rounded p-button-warning" 
+  [routerLink]="['/workshops', workshop.id, 'quizzes', 'new']"
+  pTooltip="Add new quiz" 
+  tooltipPosition="top"></button>
         </td>
       </tr>
     </ng-template>
