--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -2,10 +2,11 @@
     <div id="home" class="landing-wrapper overflow-hidden w-full h-full">
 
 <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
-    <a class="flex align-items-center" href="#">
+    <a (click)="navigateToLanding()" class="flex align-items-center">
         <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="50" class="mr-0 lg:mr-2">
         <span class="text-900 font-medium text-2xl line-height-3 mr-8">SAKAI</span>
     </a>
+    
     <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden" leaveToClass="hidden" >
         <i class="pi pi-bars text-4xl"></i>
     </a>
